# regex_engine

./: .gitignore  Cargo.toml  README.md
.github/workflows/: benchmark.yml
benches/: bench_cases.rs  glushkov_benchmark.rs  regex_benchmark.rs  rust_regex_benchmark.rs  thompson_benchmark.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: regex_glushkov.rs  regex_thompson.rs
src/: dfa.rs  glushkov.rs  lib.rs  regex_engine.rs  thompson.rs
tests/: glushkov_test.rs  rust_regex_test.rs  test_one.rs  thompson_test.rs
